Headers and body on fetch

--- a/examples/basic-api/public/index.html
+++ b/examples/basic-api/public/index.html
@@ -6,6 +6,14 @@
         <!-- Scripts -->
         <script> var exports = {}; </script>
         <script defer src="./script/index.js"></script>
+
+        <!-- Style -->
+        <style>
+            body {
+                background: #000;
+                color: #fff;
+            }
+        </style>
     </head>
     <body>
         <main id="app">
